Fixed modal display on mobiles

--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -20,15 +20,16 @@ body {
 
 #close {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 13px;
+    right: 13px;
     font-size: 2rem;
     font-weight: bold;
-    transform: scaleX(1.3);
-    background: transparent;
+    transform: scaleX(1.45);
     border: none;
     cursor: pointer;
     z-index: 10;
+    background: white;
+    border-radius: 100%;
 }
 
 
